# rust-integer-atomics

./: Cargo.toml
src/: atomic.rs  lib.rs
