[package]
name = "integer-atomics"
description = "This crate allows you to compile code that needs the unstable integer atomics types (`Atomic{U,I}{8,16,32,64}`) with the stable compiler."
version = "1.0.0"
license = "MIT"
authors = ["main() <main@ehvag.de>"]

[profile.dev]
debug-assertions = false

[profile.test]
debug-assertions = false

[features]
nightly = []

[dependencies]
